--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "browserslist" : [
+    "last 2 versions"
+  ]
 }
